fix big titles for dark mode

--- a/css/articles.css
+++ b/css/articles.css
@@ -417,4 +417,8 @@ body.dark-mode.article-subtitle {
   color: #eee;
 }
 
+body.dark-mode.big-title {
+  color: #eee;
+}
+
 
